Mejoras ejercicio1